2025-06-20T01:43:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15769382081 # 680
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-20
* notice: last 14d: unq all: 7 1654
* notice: prev accum: outdated-unq outdated-all / unq all: 2642 257730 / 2664 259452
* notice: next accum: outdated-unq outdated-all / unq all: 2643 257850 / 2666 259573
* notice: prev exec diff / last date diff / accum: unq all: +2 +121 -0 -69 / +2 +23 -0 -0 / 2 23
* notice: removed / changed dates: [2025-06-05] / [2025-06-06 2025-06-19 2025-06-20]

2025-06-19T01:44:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15747420401 # 679
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-19
* notice: last 14d: unq all: 7 1654
* notice: prev accum: outdated-unq outdated-all / unq all: 2641 257610 / 2661 259330
* notice: next accum: outdated-unq outdated-all / unq all: 2642 257730 / 2664 259452
* notice: prev exec diff / last date diff / accum: unq all: +3 +122 -0 -68 / +2 +23 -0 -0 / 2 23
* notice: removed / changed dates: [2025-06-04] / [2025-06-05 2025-06-18 2025-06-19]

2025-06-18T01:43:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15721893943 # 678
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-18
* notice: last 14d: unq all: 6 1652
* notice: prev accum: outdated-unq outdated-all / unq all: 2640 257490 / 2659 259209
* notice: next accum: outdated-unq outdated-all / unq all: 2641 257610 / 2661 259330
* notice: prev exec diff / last date diff / accum: unq all: +2 +121 -0 -68 / +2 +23 -0 -0 / 2 23
* notice: removed / changed dates: [2025-06-03] / [2025-06-04 2025-06-17 2025-06-18]

2025-06-17T01:44:09Z: