@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-06-08T01:50:20Z",
-  "count" : 124,
+  "timestamp" : "2025-06-21T01:41:37Z",
+  "count" : 55,
   "count_minmax" : [ 24, 124 ],
-  "count_decinc" : [ -0, +124 ],
+  "count_decinc" : [ -69, +124 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
