@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-06-21T01:41:37Z",
-  "count" : 121,
-  "count_minmax" : [ 23, 121 ],
-  "count_decinc" : [ -0, +121 ],
+  "count" : 25,
+  "count_minmax" : [ 25, 25 ],
+  "count_decinc" : [ -0, +25 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
