@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-06-20T01:43:36Z",
-  "count_outdated" : 257850,
-  "uniques_outdated" : 2643,
-  "count" : 259573,
-  "uniques" : 2666,
+  "timestamp" : "2025-06-21T01:41:37Z",
+  "count_outdated" : 257971,
+  "uniques_outdated" : 2644,
+  "count" : 259696,
+  "uniques" : 2668,
   "clones" : [
     {
-      "timestamp": "2025-06-06T00:00:00Z",
-      "count": 52,
-      "count_minmax": [ 24, 121 ],
-      "count_decinc": [ 69, 121 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-06-07T00:00:00Z",
-      "count": 124,
+      "count": 55,
       "count_minmax": [ 24, 124 ],
-      "count_decinc": [ 0, 124 ],
+      "count_decinc": [ 69, 124 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2025-06-20T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 23 ],
-      "count_decinc": [ 0, 23 ],
+      "count": 121,
+      "count_minmax": [ 23, 121 ],
+      "count_decinc": [ 0, 121 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-06-21T00:00:00Z",
+      "count": 25,
+      "count_minmax": [ 25, 25 ],
+      "count_decinc": [ 0, 25 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
