@@ -1,15 +1,10 @@
 {
-  "count": 1654,
+  "count": 1656,
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-06-06T00:00:00Z",
-      "count": 52,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-06-07T00:00:00Z",
-      "count": 124,
+      "count": 55,
       "uniques": 1
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2025-06-20T00:00:00Z",
-      "count": 23,
+      "count": 121,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-06-21T00:00:00Z",
+      "count": 25,
       "uniques": 2
     }
   ]
